crates/rome_formatter/tests/specs/prettier/typescript/tsx/not-react.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: not-react.ts

---
# Input
```js
/// <reference types="node" />

type ul = any;
const somethingElse = 1;
const thing = <ul>somethingElse;
const div = "<div></div>";
const h1 = `<h1>Hi</h1>`;
const footer = '<footer></footer>';

```

# Output
```js
/// <reference types="node" />

type ul = any;
const somethingElse = 1;
const thing = <ul>;
somethingElse;
const div = "<div></div>";
const h1 = `<h1>Hi</h1>`;
const footer = "<footer></footer>";

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ not-react.ts:5:19
  │
5 │ const thing = <ul>somethingElse;
  │ ------------------^^^^^^^^^^^^^ An explicit or implicit semicolon is expected here...
  │ │                  
  │ ...Which is required to end this statement


```


